@@ -124,6 +124,12 @@ x2goserver (4.1.0.4-0x2go1.1) UNRELEASED; urgency=medium
       in comment lines.
     - x2goserver/Makefile: export common variables for direct use in shell
       script sections.
+    - x2goserver/Makefile: build up sed argument line as an array and use one
+      substitution run. Multiple runs with the template file as input will
+      lead to only the last replacement to stick in the resulting generated
+      script, which is not what we want to have. Correctly doing that with
+      multiple runs would require the usage of temporary files, which is
+      needlessly complicated in this context.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
